changed colors and fixed text overlap on history page

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,6 @@
 .page-header{
-  background-color: #D2EBBF !important;
-  color: #6A6464;
+  background-color: #28A745 !important;
+  color: white;
   border-bottom: 0 !important;
   margin: 0 0 0 !important;
   display: table-cell;
